progress on dutch translation

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -23,8 +23,8 @@
     <meta property="og:description" content="We're building a blockchain based on proofs of space and time to make a cryptocurrency which is less wasteful, more decentralized, and more secure." />
 
     <!-- translation -->
-    <meta name="defaultLanguage" content="en-US">    
-    <meta name="availableLanguages" content="en-US, fr, ja">
+    <meta name="defaultLanguage" content="en-US">
+    <meta name="availableLanguages" content="en-US, fr, ja, nl">
     <link rel="localization" href="./locales/app.{locale}.ftl">
     <script defer src="./js/l20n.min.js"></script>
   </head>
