--- a/webroot/index.html
+++ b/webroot/index.html
@@ -29,7 +29,7 @@
     <meta name="availableLanguages" content="en-US, fr, ja, nl">
     <link rel="localization" href="./locales/app.{locale}.ftl">
     <script defer src="./js/l20n.min.js"></script>
-    <script defer src="./js/locales.js"></script>    
+    <script defer src="./js/locales.js"></script>
   </head>
   <body class="layout">
     <div class="page js-page">
@@ -260,12 +260,13 @@
                 <div class="row">
                   <div class="col-lg-12 wrap">
                     <div class="box">
-                      <a class="langSwitch" locale="en-US" href="#">English</a>  
-                      <a class="langSwitch" locale="fr" href="#">Français</a>  
-                      <a class="langSwitch" locale="ja" href="#">日本語</a> 
+                      <a class="langSwitch" locale="en-US" href="#">English</a>
+                      <a class="langSwitch" locale="fr" href="#">Français</a>
+                      <a class="langSwitch" locale="ja" href="#">日本語</a>
+                      <a class="langSwitch" locale="nl" href="#">Nederlands</a> 
                     </div>
                   </div>
-                </div>       
+                </div>
               </div>
             </div>
           </div>
