--- a/webroot/faq/index.html
+++ b/webroot/faq/index.html
@@ -16,6 +16,19 @@
     <meta name="apple-mobile-web-app-title" content="Chia">
     <meta name="application-name" content="Chia">
     <meta name="theme-color" content="#ffffff">
+
+    <!-- translations -->
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
+    <script src="//cdn.rawgit.com/showdownjs/showdown/1.6.4/dist/showdown.min.js"></script>
+    <script src="//cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+    
+    <meta name="defaultLanguage" content="en-US">
+    <meta name="availableLanguages" content="en-US, fr, ja, nl">
+    <link rel="localization" href="/locales/app.{locale}.ftl">
+    <script src="/js/l20n.min.js"></script>
+
+    <script defer src="/js/locales.js?v=4"></script>    
+    <script defer src="/js/locales.faq.js?v=7"></script>
   </head>
   <body class="layout">
     <div class="page js-page">
@@ -36,20 +49,52 @@
       <div class="wrap container-fluid" style="padding-bottom:0;padding-top:10px;">
         <div class="row">
           <div class="col-lg-10 col-lg-offset-1">
-            <div class="doc">
-            </div>
-            </div>
+            <div class="doc"></div>            
           </div>
         </div>
       </div>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script src="//cdn.rawgit.com/showdownjs/showdown/1.6.4/dist/showdown.min.js"></script>
-    <script>
-        $.get('faq.md', function(md){
-                    $('.doc').html(new showdown.Converter().makeHtml(md));  
-        });
-    </script>
+      <footer class="hero page-footer">
+        <div class="row">
+          <div class="col-lg-12 wrap">
+            <div class="box">
+              <div class="wrap container-fluid">
+                <div class="row">
+                  <div class="col-lg-12">
+                    <div class="box">
+                      <div class="grey-fade">
+                        <img src="../images/leaf.png" style="max-width:100px;" />
+                        <h2 data-l10n-id="slogan">green money for a digital world</h2><br />
+                        <p>
+                          <a href="mailto:hello@chia.network">hello@chia.network</a><br />
+                          (650) 924-2785<br />
+                        </p>
+                        <p>
+                          © Chia Network 2017
+                        </p>
+                        <!--<p>
+                          TODO: social media icons
+                        </p>-->
+                      </div>
+                    </div>
+                  </div>
+                </div>
+                <div class="row">
+                  <div class="col-lg-12 wrap">
+                    <div class="box">
+                      <a class="langSwitch" locale="en-US" href="#">English</a>
+                      <a class="langSwitch" locale="fr" href="#">Français</a>
+                      <a class="langSwitch" locale="ja" href="#">日本語</a>
+                      <a class="langSwitch" locale="nl" href="#">Nederlands</a> 
+                    </div>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
+
     </div>
 </body>
 </html>
