add Content-Security-Policy directive

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE HTML>
 <html>
   <head>
+    <meta http-equiv="Content-Security-Policy" content="default-src 'none'; 
+      script-src 'self' cdn.jsdelivr.net ajax.googleapis.com; 
+      style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com fonts.googleapis.com; 
+      img-src 'self'; 
+      connect-src 'self'; 
+      font-src 'self' fonts.gstatic.com">
+
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>chia.network</title>
