--- a/webroot/faq/index.html
+++ b/webroot/faq/index.html
@@ -3,7 +3,7 @@
   <head>
       <meta http-equiv="Content-Security-Policy" content="default-src 'none';
         script-src 'self' cdn.jsdelivr.net ajax.googleapis.com cdn.rawgit.com;
-        style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com fonts.googleapis.com;
+        style-src 'self' cdnjs.cloudflare.com fonts.googleapis.com;
         img-src 'self';
         connect-src 'self';
         font-src 'self' fonts.gstatic.com">
@@ -53,7 +53,7 @@
         </div>
       </header>
 
-      <div class="wrap container-fluid" style="padding-bottom:0;padding-top:10px;">
+      <div class="wrap container-fluid faq-doc">
         <div class="row">
           <div class="col-lg-10 col-lg-offset-1">
             <div class="doc"></div>            
@@ -70,7 +70,7 @@
                   <div class="col-lg-12">
                     <div class="box">
                       <div class="grey-fade">
-                        <img src="../images/leaf.png" style="max-width:100px;" />
+                        <img class="leaf" src="../images/leaf.png" />
                         <h2 data-l10n-id="slogan">green money for a digital world</h2><br />
                         <p>
                           <a href="mailto:hello@chia.network">hello@chia.network</a><br />
