--- a/webroot/index.html
+++ b/webroot/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta http-equiv="Content-Security-Policy" content="default-src 'none'; 
       script-src 'self' cdn.jsdelivr.net ajax.googleapis.com; 
-      style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com fonts.googleapis.com; 
+      style-src 'self' cdnjs.cloudflare.com fonts.googleapis.com; 
       img-src 'self'; 
       connect-src 'self'; 
       font-src 'self' fonts.gstatic.com">
@@ -60,7 +60,7 @@
         </div>
       </header>
 
-      <div class="wrap container-fluid" style="padding-bottom:0;padding-top:10px;">
+      <div class="wrap container-fluid mission-banner">
         <div class="row">
           <div class="col-lg-4">
             <div class="box"><h1 data-l10n-id="slogan">green money for<br />a digital world</h1></div>
@@ -75,7 +75,7 @@
         </div>
       </div>
 
-      <div class="wrap container-fluid" style="padding-bottom:60px;padding-top:10px;">
+      <div class="wrap container-fluid v-padding">
         <div class="row">
           <div class="col-lg-4">
             <div class="box centered">
@@ -95,7 +95,7 @@
         </div>
       </div>
 
-      <div class="wrap container-fluid" style="padding-bottom:60px;padding-top:10px;">
+      <div class="wrap container-fluid v-padding">
         <div class="row">
           <div class="col-lg-12">
             <div class="box">
@@ -133,9 +133,9 @@
                     </div>
                   </div>
                   <div class="col-lg-4 col-lg-offset-2">
-                    <div class="box" style="text-align:center;"><h2 data-l10n-id="get-chia">Get Chia</h2>
+                    <div class="box get-chia"><h2 data-l10n-id="get-chia">Get Chia</h2>
                       <p>
-                        <img src="images/leaf.png" class="white-leaf" style="max-width:150px;" />
+                        <img class="big-leaf" src="images/leaf.png" class="white-leaf" />
                       </p>
                     </div>
                   </div>
@@ -251,7 +251,7 @@
                   <div class="col-lg-12">
                     <div class="box">
                       <div class="grey-fade">
-                        <img src="images/leaf.png" style="max-width:100px;" />
+                        <img class="leaf" src="images/leaf.png"/>
                         <h2 data-l10n-id="slogan">green money for a digital world</h2><br />
                         <p>
                           <a href="mailto:hello@chia.network">hello@chia.network</a><br />
