--- a/webroot/faq/index.html
+++ b/webroot/faq/index.html
@@ -12,9 +12,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>chia.network</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css" >
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css"
+        integrity="sha384-lYQsy3+y5OZ48NxBmwaDdLIfraac06B9Y+GxLBpls0w3B97eRObW0Bs6yzuUMvV9" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css" type="text/css" >
-    <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto" rel="stylesheet"
+        integrity="sha384-feDrtoSxdkFWH1QlDJi1G3KC3rJXAyjhpjYT6LKtPewPUHURVS4ILd9TvP482j3F sha384-uxDZNlM7c5preG7zFPH9Axvf2wAb7QCPeJ9bs8Ld3VibeQpxTe7lZ7qS3dHZYy7w" crossorigin="anonymous">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
@@ -25,14 +27,17 @@
     <meta name="theme-color" content="#ffffff">
 
     <!-- translations -->
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
-    <script src="//cdn.rawgit.com/showdownjs/showdown/1.6.4/dist/showdown.min.js"></script>
-    <script src="//cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
+    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"
+        integrity="sha384-XxcvoeNF5V0ZfksTnV+bejnCsJjOOIzN6UVwF85WBsAnU3zeYh5bloN+L4WLgeNE" crossorigin="anonymous"></script>
+    <script src="//cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"
+        integrity="sha384-xfK7Pd4lZwvHpwqHVm6CLkaaJWD3pwmicCjngjDHNBjH5tYAr4ZsgFBEbtnjI1zD" crossorigin="anonymous"></script>    
+    <script src="//cdn.rawgit.com/showdownjs/showdown/1.6.4/dist/showdown.min.js"
+        integrity="sha384-mjkivrTZk80GtJ0Qy5f3z2IqRTZSz3l+3kZP9NHDtvDqoD0I0z57mISxqZrbP6CJ" crossorigin="anonymous"></script>
     
     <meta name="defaultLanguage" content="en-US">
     <meta name="availableLanguages" content="en-US, fr, ja, nl">
     <link rel="localization" href="/locales/app.{locale}.ftl">
-    <script src="/js/l20n.min.js"></script>
+    <script src="/js/l20n.min.js"></script> 
 
     <script defer src="/js/locales.js?v=4"></script>    
     <script defer src="/js/locales.faq.js?v=7"></script>
