--- a/webroot/faq/index.html
+++ b/webroot/faq/index.html
@@ -81,12 +81,7 @@
                 </div>
                 <div class="row">
                   <div class="col-lg-12 wrap">
-                    <div class="box">
-                      <a class="langSwitch" locale="en-US" href="#">English</a>
-                      <a class="langSwitch" locale="fr" href="#">Français</a>
-                      <a class="langSwitch" locale="ja" href="#">日本語</a>
-                      <a class="langSwitch" locale="nl" href="#">Nederlands</a> 
-                    </div>
+                    <div class="box" id="lang-box"></div>
                   </div>
                 </div>
               </div>
