fix layout vertical laignment of the mission statemement box

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -56,16 +56,20 @@
       <div class="wrap container-fluid" style="padding-bottom:0;padding-top:10px;">
         <div class="row">
           <div class="col-lg-4">
-            <div class="box"><h1 data-l10n-id="slogan">green money for<br />a digital world</h1></div>
+            <div class="box">
+              <h1 data-l10n-id="slogan">green money for a digital world</h1>
+            </div>
           </div>
+
           <div class="col-lg-7 col-lg-offset-1">
-            <div class="box" data-l10n-id="mission">
-              <p><br />
+            <div class="box">
+              <br/>
+              <p data-l10n-id="mission">
               We're building a blockchain based on proofs of space and time to make a cryptocurrency which is less wasteful, more decentralized, and more secure.
               </p>
             </div>
           </div>
-        </div>
+        </div>        
       </div>
 
       <div class="wrap container-fluid" style="padding-bottom:60px;padding-top:10px;">
