--- a/webroot/index.html
+++ b/webroot/index.html
@@ -26,7 +26,7 @@
 
     <!-- translation -->
     <meta name="defaultLanguage" content="en-US">
-    <meta name="availableLanguages" content="en-US, fr, ja, nl">
+    <meta name="availableLanguages" content="en-US, fr, ja, nl, de, es">
     <link rel="localization" href="./locales/app.{locale}.ftl">
     <script defer src="./js/l20n.min.js"></script>
     <script defer src="./js/locales.js"></script>
@@ -258,7 +258,7 @@
                           © Chia Network 2017
                         </p>
                         <p>
-                          <a href="https://github.com/Chia-Network/website"><img src="images/github.svg" style="max-width:50px">
+                          <a href="https://github.com/Chia-Network/website"><img src="images/github.svg" style="max-width:50px"></a>
                         </p>
                         <!--<p>
                           TODO: social media icons
