--- a/webroot/faq/index.html
+++ b/webroot/faq/index.html
@@ -38,7 +38,7 @@
             <div class="box">
               <div class="row">
                 <div class="col-lg-2 col-md-6 col-sm-6 col-xs-12">
-                  <div class="box"><img src="../images/chia-logo.png" class="logo" /></div>
+                  <div class="box"><a href="/"><img src="../images/chia-logo.png" class="logo" /></a></div>
                 </div>
               </div>
             </div>
