--- a/webroot/faq/index.html
+++ b/webroot/faq/index.html
@@ -3,7 +3,7 @@
   <head>
       <meta http-equiv="Content-Security-Policy" content="default-src 'none';
         script-src 'self' cdn.jsdelivr.net ajax.googleapis.com cdn.rawgit.com;
-        style-src 'self' cdnjs.cloudflare.com fonts.googleapis.com;
+        style-src 'self' 'unsafe-inline' cdnjs.cloudflare.com fonts.googleapis.com;
         img-src 'self';
         connect-src 'self';
         font-src 'self' fonts.gstatic.com">
@@ -16,7 +16,7 @@
         integrity="sha384-lYQsy3+y5OZ48NxBmwaDdLIfraac06B9Y+GxLBpls0w3B97eRObW0Bs6yzuUMvV9" crossorigin="anonymous">
     <link rel="stylesheet" href="/css/style.css" type="text/css" >
     <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto" rel="stylesheet"
-        integrity="sha384-feDrtoSxdkFWH1QlDJi1G3KC3rJXAyjhpjYT6LKtPewPUHURVS4ILd9TvP482j3F sha384-uxDZNlM7c5preG7zFPH9Axvf2wAb7QCPeJ9bs8Ld3VibeQpxTe7lZ7qS3dHZYy7w" crossorigin="anonymous">
+        integrity="sha384-aPzjPSJrj3qW8jriySl4WmAOikYCsDKB02JhWb5m7Hhdif/4kgxnU9le+YoX4c+A sha384-feDrtoSxdkFWH1QlDJi1G3KC3rJXAyjhpjYT6LKtPewPUHURVS4ILd9TvP482j3F sha384-uxDZNlM7c5preG7zFPH9Axvf2wAb7QCPeJ9bs8Ld3VibeQpxTe7lZ7qS3dHZYy7w" crossorigin="anonymous">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
     <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
