--- a/webroot/index.html
+++ b/webroot/index.html
@@ -122,7 +122,7 @@
                   <div class="col-lg-6">
                     <div class="box">
                       <p><br />
-                        <span data-l10n-id="sell-plan">We plan to sell Chia to the public next year to allow everyone to invest in a better digital money.</span>
+                        <span data-l10n-id="sell-plan">We plan to sell Chia to the public in Q2 of 2018 to allow everyone to invest in a better digital money.</span>
                       </p>
                       <p data-l10n-id="subscribe">
                       Subscribe to the <a href="https://groups.google.com/a/chia.network/forum/#!forum/announce">announcements list</a> to learn more.
