--- a/webroot/index.html
+++ b/webroot/index.html
@@ -29,7 +29,7 @@
 
     <!-- translation -->
     <meta name="defaultLanguage" content="en-US">
-    <meta name="availableLanguages" content="en-US, fr, ja, nl, de, es">
+    <meta name="availableLanguages" content="en-US, fr, ja, nl, de, es, sr">
     <link rel="localization" href="./locales/app.{locale}.ftl">
     <script defer src="./js/l20n.min.js"></script>
     <script defer src="./js/locales.js"></script>
