--- a/webroot/index.html
+++ b/webroot/index.html
@@ -26,6 +26,11 @@
 	
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.js"></script>
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/aos/2.2.0/aos.css">
+	
+	<!-- .css for footer -->
+	
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./css/footer.css">
 
     <!-- translation -->
     <meta name="defaultLanguage" content="en-US">
@@ -255,46 +260,51 @@
         </div>
       </div>
 
-      <footer class="hero page-footer">
-        <div class="row">
-          <div class="col-lg-12 wrap">
-            <div class="box">
-              <div class="wrap container-fluid">
-                <div class="row">
-                  <div class="col-lg-12">
-                    <div class="box">
-                      <div class="grey-fade">
-                        <img src="images/leaf.svg" style="max-width:100px;" />
-                        <h2 data-l10n-id="slogan">green money for a digital world</h2><br />
-                        <p>
-                          <a href="mailto:hello@chia.network">hello@chia.network</a><br />
-                          (650) 924-2785<br />
-                        </p>
-                        <p>
-                          © Chia Network 2018
-                        </p>
-                        <p>
-                          <a href="https://github.com/Chia-Network/website"><img src="images/github.svg" title="GitHub" style="max-width:50px"></a>
-                        </p>
-                        <!--<p>
-                          TODO: social media icons
-                        </p>-->
-                      </div>
+    <footer id="myFooter">
+        <div class="container">
+            <div class="row">
+                <div class="col-sm-3">
+                    <h2 class="logo"><img src="images/leaf.svg" style="max-width:100px;" /></h2>
+                </div>
+                <div class="col-sm-2">
+                    <h5>Get started</h5>
+                    <ul>
+                        <li><a href="#">Home</a></li>
+                        <li><a href="#community">Community</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-2">
+                    <h5>Information</h5>
+                    <ul>
+                        <li><a href="#jobs">Jobs</a></li>
+                        <li><a href="news/index.html">News</a></li>
+                        <li><a href="#about">About us</a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-2">
+                    <h5>Support</h5>
+                    <ul>
+                        <li><a href="faq/">FAQ</a></li>
+                        <li><a href="#">Contact us</a></li>
+                        <li><a href="https://eprint.iacr.org/2017/893">Technical paper </a></li>
+                    </ul>
+                </div>
+                <div class="col-sm-3">
+                    <div class="social-networks">
+                        <a href="https://twitter.com/bramcohen" class="twitter"><i class="fa fa-twitter"></i></a>
+                        <a href="https://www.facebook.com/pages/Chia-Network/1764852770489660"><i class="fa fa-facebook"></i></a>
+						<a href="https://github.com/Chia-Network"><i class="fa fa-github"></i></a>
                     </div>
-                  </div>
-                </div>
-                <div class="row">
-                  <div class="col-lg-12 wrap">
-                    <div class="box" id="lang-box"></div>
-                  </div>
-                </div>
-              </div>
+                </div>	
             </div>
-          </div>
         </div>
-      </footer>
-
-    </div>
-
+                  	
+        <div class="footer-copyright">
+		     <nobr style="font-size:70%; float: right;"> © Chia Network 2018</nobr>
+		     <div class="box" id="lang-box"></div>  
+        </div>
+		
+    </footer>
+	
   </body>
 </html>
