--- a/webroot/index.html
+++ b/webroot/index.html
@@ -40,7 +40,7 @@
             <div class="box">
               <div class="row">
                 <div class="col-lg-2 col-md-6 col-sm-6 col-xs-12">
-                  <div class="box"><img src="images/chia-logo.png" class="logo" /></div>
+                  <div class="box"><img src="images/chia-logo.svg" class="logo" /></div>
                 </div>
                 <div class="col-lg-10 col-md-6 col-sm-6 col-xs-12">
                   <div class="box header-button">
