--- a/webroot/index.html
+++ b/webroot/index.html
@@ -38,12 +38,12 @@
         <nav class="navbar navbar-expand-lg justify-content-between">
             <div class="container">
                 <h1><img src="images/chia-logo.png" class="logo" alt="Chia"></h1>
-                <a href="#jobs" class="btn btn-outline-primary btn-lg" role="button" data-l10n-id="hiring">we're hiring!</a>
+                <a href="#jobs" class="btn btn-outline-dark btn-lg" role="button" data-l10n-id="hiring">we're hiring!</a>
             </div>
         </nav>
     </header>
 
-    <div class="container">
+    <div class="container hero">
       <div class="row justify-content-center align-items-center heading">
         <div class="col-md-4 slogan">
           <h2 data-l10n-id="slogan">green money for a digital world</h1>
@@ -83,10 +83,10 @@
       </div>
     </div>
 
-    <div class="container-fluid greenrow">
+    <div class="container-fluid green">
       <div class="container">
-        <div class="row">
-          <div class="col-md text-left">
+        <div class="row justify-content-between">
+          <div class="col-md-6 text-left">
             <p>
               <span data-l10n-id="sell-plan">We plan to sell Chia to the public in Q2 of 2018 to allow everyone to invest in a better digital money.</span>
             </p>
@@ -94,7 +94,7 @@
               Subscribe to the <a href="https://groups.google.com/a/chia.network/forum/#!forum/announce">announcements list</a> to learn more.
             </p>
           </div>
-          <div class="col-md text-center">
+          <div class="col-md-4 text-center">
             <h2 data-l10n-id="get-chia">Get Chia</h2>
                 <img src="images/leaf.png" class="white-leaf" style="max-width:150px;" />
           </div>
@@ -102,11 +102,11 @@
       </div>
     </div>
 
-    <div class="container-fluid communityrow">
+    <div class="container-fluid community">
         <div class="container">
             <div class="row">
                 <div class="col-md text-left">
-                    <h3 data-l10n-id="community">Community</h3>
+                    <h2 data-l10n-id="community">Community</h2>
                 </div>
                 <div class="col-md">
                     <div class="card">
@@ -147,7 +147,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md text-left">
-                    <h3 data-l10n-id="financial-instituations">Financial Institutions</h3>
+                    <h2 data-l10n-id="financial-instituations">Financial Institutions</h2>
                 </div>
                 <div class="col-md">
                     <p data-l10n-id="financial-instituation-value-prop">
@@ -182,8 +182,9 @@
                         <br />
                         <p>
                             <a href="mailto:hello@chia.network">hello@chia.network</a>
-                            <br /> (650) 924-2785
-                            <br />
+                        </p>
+                        <p>
+                            (650) 924-2785
                         </p>
                         <p>
                             © Chia Network 2018
