svg logo on all pages

--- a/webroot/faq/index.html
+++ b/webroot/faq/index.html
@@ -34,7 +34,7 @@
       <header>
           <nav class="navbar navbar-expand-lg justify-content-between">
               <div class="container">
-                  <h1><a href="/"><img src="../images/chia-logo.png" class="logo" alt="Chia"></a></h1>
+                  <h1><a href="/"><img src="../images/chia-logo.svg" class="logo" alt="Chia"></a></h1>
                   <a href="/#jobs" class="btn btn-outline-dark btn-lg" role="button" data-l10n-id="hiring">we're hiring!</a>
               </div>
           </nav>
