--- a/webroot/index.html
+++ b/webroot/index.html
@@ -37,7 +37,7 @@
     <header>
         <nav class="navbar navbar-expand-lg justify-content-between">
             <div class="container">
-                <h1><img src="images/chia-logo.png" class="logo" alt="Chia"></h1>
+                <h1><img src="../images/chia-logo.svg" class="logo" alt="Chia"></h1>
                 <a href="#jobs" class="btn btn-outline-dark btn-lg" role="button" data-l10n-id="hiring">we're hiring!</a>
             </div>
         </nav>
