--- a/webroot/index.html
+++ b/webroot/index.html
@@ -9,8 +9,9 @@
     <link rel="stylesheet" href="css/style.css" type="text/css" >
     <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="favicon-16x16.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="leaf.ico">
+    <!--link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png"-->
+    <link rel="icon" type="image/png" sizes="16x16" href="leaf.ico">
     <link rel="manifest" href="/manifest.json">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="apple-mobile-web-app-title" content="Chia">
@@ -132,7 +133,7 @@
                   <div class="col-lg-4 col-lg-offset-2">
                     <div class="box" style="text-align:center;"><h2 data-l10n-id="get-chia">Get Chia</h2>
                       <p>
-                        <img src="images/leaf.png" class="white-leaf" style="max-width:150px;" />
+                        <img src="images/leafv2.png" class="white-leaf" style="max-width:150px;" />
                       </p>
                     </div>
                   </div>
@@ -245,7 +246,7 @@
                   <div class="col-lg-12">
                     <div class="box">
                       <div class="grey-fade">
-                        <img src="images/leaf.png" style="max-width:100px;" />
+                        <img src="images/leafv2.png" style="max-width:100px;" />
                         <h2 data-l10n-id="slogan">green money for a digital world</h2><br />
                         <p>
                           <a href="mailto:hello@chia.network">hello@chia.network</a><br />
