--- a/webroot/faq/index.html
+++ b/webroot/faq/index.html
@@ -63,7 +63,7 @@
                   <div class="col-lg-12">
                     <div class="box">
                       <div class="grey-fade">
-                        <img src="../images/leaf.png" style="max-width:100px;" />
+                        <img src="../images/leafv2.png" style="max-width:100px;" />
                         <h2 data-l10n-id="slogan">green money for a digital world</h2><br />
                         <p>
                           <a href="mailto:hello@chia.network">hello@chia.network</a><br />
