Added creative commons license
Added the creative commons license to all pages on website's footer.

--- a/webroot/faq/index.html
+++ b/webroot/faq/index.html
@@ -85,6 +85,9 @@
                 <div class="row">
                   <div class="col-lg-12 wrap">
                     <div class="box" id="lang-box"></div>
+                    <p class="grey">
+                         By contributing to this repository, you agree to license your work under the MIT license unless specified otherwise in contrib/debian/copyright or at the top of the file itself. Any work contributed where you are not the original author must contain its license header with the original author(s) and source. 
+                      </p>
                   </div>
                 </div>
               </div>
