--- a/webroot/index.html
+++ b/webroot/index.html
@@ -9,9 +9,8 @@
     <link rel="stylesheet" href="css/style.css" type="text/css" >
     <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="leaf.ico">
-    <!--link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png"-->
-    <link rel="icon" type="image/png" sizes="16x16" href="leaf.ico">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="favicon-16x16.png">
     <link rel="manifest" href="/manifest.json">
     <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
     <meta name="apple-mobile-web-app-title" content="Chia">
@@ -268,6 +267,9 @@
                 <div class="row">
                   <div class="col-lg-12 wrap">
                     <div class="box" id="lang-box"></div>
+                      <p class="grey">
+                         By contributing to this repository, you agree to license your work under the MIT license unless specified otherwise in contrib/debian/copyright or at the top of the file itself. Any work contributed where you are not the original author must contain its license header with the original author(s) and source. 
+                      </p>
                   </div>
                 </div>
               </div>
