--- a/webroot/faq/index.html
+++ b/webroot/faq/index.html
@@ -31,13 +31,13 @@
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.12.0/jquery.min.js"></script>
     <script src="//cdn.rawgit.com/showdownjs/showdown/1.6.4/dist/showdown.min.js"></script>
     <script src="//cdn.jsdelivr.net/npm/js-cookie@2/src/js.cookie.min.js"></script>
-    
+
     <meta name="defaultLanguage" content="en-US">
-    <meta name="availableLanguages" content="en-US, fr, ja, nl, de, es, sr">
+    <meta name="availableLanguages" content="en-US, fr, ja, nl, de, es, sr, zh-TW">
     <link rel="localization" href="/locales/app.{locale}.ftl">
     <script src="/js/l20n.min.js"></script>
 
-    <script defer src="/js/locales.js?v=4"></script>    
+    <script defer src="/js/locales.js?v=4"></script>
     <script defer src="/js/locales.faq.js?v=7"></script>
   </head>
   <body class="layout">
@@ -59,7 +59,7 @@
       <div class="wrap container-fluid" style="padding-bottom:0;padding-top:10px;">
         <div class="row">
           <div class="col-lg-10 col-lg-offset-1">
-            <div class="doc"></div>            
+            <div class="doc"></div>
           </div>
         </div>
       </div>
@@ -96,7 +96,7 @@
                   <div class="col-lg-12 wrap">
                     <div class="box" id="lang-box"></div>
                     <p class="grey">
-                         By contributing to this repository, you agree to license your work under the MIT license unless specified otherwise in contrib/debian/copyright or at the top of the file itself. Any work contributed where you are not the original author must contain its license header with the original author(s) and source. 
+                         By contributing to this repository, you agree to license your work under the MIT license unless specified otherwise in contrib/debian/copyright or at the top of the file itself. Any work contributed where you are not the original author must contain its license header with the original author(s) and source.
                       </p>
                   </div>
                 </div>
