--- a/webroot/index.html
+++ b/webroot/index.html
@@ -36,7 +36,7 @@
 
     <!-- translation -->
     <meta name="defaultLanguage" content="en-US">
-    <meta name="availableLanguages" content="en-US, fr, ja, nl, de, es, sr">
+    <meta name="availableLanguages" content="en-US, fr, ja, nl, de, es, sr, zh-TW">
     <link rel="localization" href="./locales/app.{locale}.ftl">
     <script defer src="./js/l20n.min.js"></script>
     <script defer src="./js/locales.js"></script>
@@ -79,7 +79,7 @@
               </p>
             </div>
           </div>
-        </div>        
+        </div>
       </div>
 
       <div class="wrap container-fluid" style="padding-bottom:60px;padding-top:10px;">
@@ -278,7 +278,7 @@
                   <div class="col-lg-12 wrap">
                     <div class="box" id="lang-box"></div>
                       <p class="grey">
-                         By contributing to this repository, you agree to license your work under the MIT license unless specified otherwise in contrib/debian/copyright or at the top of the file itself. Any work contributed where you are not the original author must contain its license header with the original author(s) and source. 
+                         By contributing to this repository, you agree to license your work under the MIT license unless specified otherwise in contrib/debian/copyright or at the top of the file itself. Any work contributed where you are not the original author must contain its license header with the original author(s) and source.
                       </p>
                   </div>
                 </div>
