--- a/webroot/index.html
+++ b/webroot/index.html
@@ -245,7 +245,7 @@
         </div>
       </div>
 
-      <div class="hero contribute">
+      <div class="hero community">
         <div class="row">
           <div class="col-lg-12 wrap">
             <div class="box">
