--- a/webroot/index.html
+++ b/webroot/index.html
@@ -53,7 +53,7 @@
                 </div>
                 <div class="col-lg-10 col-md-6 col-sm-6 col-xs-12">
                   <div class="box header-button">
-                    <a data-l10n-id="hiring" href="#jobs">we're hiring!</a>
+                    <a data-l10n-id="hiring" href="#jobs">We're hiring!</a>
                   </div>
                 </div>
               </div>
