--- a/webroot/index.html
+++ b/webroot/index.html
@@ -252,21 +252,21 @@
               <div class="wrap container-fluid">
                 <div class="row">
                   <div class="col-lg-6">
-                    <div class="box"><h3>Contribute</h3></div>
+                    <div class="box"><h3 data-l10n-id="contribute">Contribute</h3></div>
                   </div>
                   <div class="col-lg-6">
                     <div class="box"><br />
-                      <span>Are you a developer and want to contribute to the Chia Network? Here are a few ideas:</span>
+                      <span data-l10n-id="contribute-question">Are you a developer and want to contribute to the Chia Network? Here are a few ideas:</span>
 
                       <ol class="info-box">
-                        <li> 
-                          <strong>Fix existing issues</strong>: the <a href="https://github.com/Chia-Network/website/issues">issue tracker</a> is the best place to find a useful way to contribute to Chia Network. Before starting to write any patches for issues you find, you may want to comment on the issue to make sure nobody else is already working on it.
-                        </li>
-                        <li>
-                          <strong>Add Language Translations</strong>: We recommend using Github's tools to make a clone of the web site repo and submit changes through there. Take a look at our site on <a href="https://github.com/Chia-Network/website">github</a> and submit a pull request.
+                        <li data-l10n-id="contribute-idea-one"> 
+                          Fix existing issues: the <a href="https://github.com/Chia-Network/website/issues">issue tracker</a> is the best place to find a useful way to contribute to Chia Network. Before starting to write any patches for issues you find, you may want to comment on the issue to make sure nobody else is already working on it.
+						</li >
+						
+                        <li data-l10n-id="contribute-idea-two">
+                          Add Language Translations: We recommend using Github's tools to make a clone of the web site repo and submit changes through there. Take a look at our site on <a href="https://github.com/Chia-Network/website">github</a> and submit a pull request.
                         </li>
                       </ol>
-                      
                     </div>
                   </div>
                 </div>
