--- a/webroot/index.html
+++ b/webroot/index.html
@@ -194,7 +194,7 @@
                   <div class="col-lg-12">
                     <div class="box"><h2 data-l10n-id="jobs">Jobs</h2>
                       <p data-l10n-id="looking-to-hire">
-                        We're looking to hire several technically gifted programmers to work with our team of cryptographers on building our protocol. Must have strong algorithms skills. Cryptography experience is a plus but not required. Remote is okay but being in San Francisco is a plus. To apply please do several HackerRank challenges and send a link to your HackerRank profile plus your resume to <a href="mailto:jobs@chia.network">jobs@chia.network</a>.
+                        We're looking to hire several technically gifted programmers to work with our team of cryptographers on building our protocol. Must have strong algorithms skills. Cryptography experience is a plus but not required. Remote is okay but being in San Francisco is a plus. To apply, please complete several HackerRank challenges and send a link to your HackerRank profile plus your resume to <a href="mailto:jobs@chia.network">jobs@chia.network</a>.
                       </p>
                     </div>
                   </div>
