Important word change
The word "which" is used to include incidental information about a sentence, i.e. information that does not change its meaning. With Chia, we are not creating a cryptocurrency that, oh, by the way, just happens to be less wasteful, more decentralized, and more secure - rather, these attributes are vital characteristics of the cryptocurrency in question. It is far more appropriate to use "that" in the sentence serving as the website's front-and-center description of the project's mission.

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -74,7 +74,7 @@
             <div class="box">
               <br/>
               <p data-l10n-id="mission">
-              We're building a blockchain based on proofs of space and time to make a cryptocurrency which is less wasteful, more decentralized, and more secure.
+              We're building a blockchain based on proofs of space and time to make a cryptocurrency that is less wasteful, more decentralized, and more secure.
               </p>
             </div>
           </div>
