index, faq, news footer
Updated the links so they open in a new tab.

--- a/webroot/faq/index.html
+++ b/webroot/faq/index.html
@@ -203,17 +203,17 @@
                     <p class="header"> Find us </p>
                   </li>
                   <li class="social_footer">
-                    <a href="https://www.facebook.com/Chia-Net-324129071326652/">
+                    <a href="https://www.facebook.com/Chia-Net-324129071326652/" target="blank">
                         <img src="/images/soc_fb.svg" title="Facebook" >
                     </a>
                   </li>
                    <li class="social_footer">
-                    <a href="https://twitter.com/ChiaNetworkInc">
+                    <a href="https://twitter.com/ChiaNetworkInc" target="blank">
                         <img src="/images/soc_tw.svg" title="Twitter" >
                     </a>
                   </li>
                    <li class="social_footer">
-                    <a href="https://github.com/Chia-Network/website">
+                    <a href="https://github.com/Chia-Network/website" target="blank">
                         <img src="/images/github.svg" title="GitHub" style="max-width:18px">
                     </a>
                   </li>
