--- a/webroot/index.html
+++ b/webroot/index.html
@@ -217,7 +217,7 @@
             <div class="col-lg-3">
                 <ul>
                   <li>
-                    <p class="header"> Language </p>
+                    <p class="header" data-l10n-id="footer-language"> Language </p>
                   </li>
                   <li>
                     <div id="lang-box"></div>
@@ -228,7 +228,7 @@
             <div class="col-lg-3">
                 <ul>
                   <li>
-                    <p class="header"> Contact </p>
+                    <p class="header" data-l10n-id="footer-contact"> Contact </p>
                   </li>
                   
                   <li>
@@ -242,7 +242,7 @@
             <div class="col-lg-3">
                <ul >
                   <li>
-                    <p class="header"> Find us </p>
+                    <p class="header" data-l10n-id="footer-find-us"> Find us </p>
                   </li>
                   <li class="social_footer">
                     <a href="https://www.facebook.com/Chia-Net-324129071326652/" target="blank">
