Improved the readability of the mission container

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -46,7 +46,7 @@
   <body class="layout">
     <div class="page js-page">
       <header class="hero header wrap container-fluid smaller">
-        <div class="row">
+        <div class="row head">
           <div class="col-lg-2 col-sm-6">
             <div class="box"><img src="images/chia-logo.svg" class="logo" /></div>
           </div>
@@ -58,33 +58,14 @@
         </div>
       </header>
       <div class="wrap container-fluid smaller">
-        <div class="row">
-          <div class="col-lg-4">
-            <h1 data-l10n-id="slogan">green money for a digital world</h1>
-          </div>
-          <div class="col-lg-7 col-lg-offset-1">
-            <p data-l10n-id="mission" class="margin-top"> We're building a blockchain based on proofs of space and time to make a cryptocurrency that is less wasteful, more decentralized, and more secure. </p>
-          </div>
-        </div>
-      </div>
-      <div class="wrap container-fluid smaller">
-        <div class="row">
-          <div class="col-sm-4">
-            <div class="centered"> <img src="images/earth.png" class="med-icon" /> </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="centered"> <img src="images/network.png" class="med-icon" /> </div>
-          </div>
-          <div class="col-sm-4">
-            <div class="centered"> <img src="images/lock.png" class="med-icon" /> </div>
-          </div>
-        </div>
+        <h1 data-l10n-id="slogan">green money for a digital world</h1>
+        <p data-l10n-id="mission" class="mission">We're building a blockchain based on proofs of space and time to make a cryptocurrency that is less wasteful, more decentralized, and more secure. </p>
+        <img src="images/leaf.png" class="earth" />
       </div>
       <div class="wrap container-fluid" style="padding-bottom:60px;padding-top:10px;">
         <div class="row">
           <div class="col-lg-12">
             <div class="info-box">
-              <h4 data-l10n-id="learn-more">Learn more</h4>
               <p>
                 <ul>
                   <li data-l10n-id="recent-talk">A
