added "?v1" to style.css file

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -17,7 +17,7 @@
     <title>chia.network</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css" type="text/css">
+    <link rel="stylesheet" href="css/style.css?v1" type="text/css">
 
     <link rel="stylesheet" href="../css/bootstrap.min.css?v1" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto" rel="stylesheet">
