Updated copy on homepage

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -137,7 +137,7 @@
                     <ul>
                       <li><h4>News and Information</h4></li>
                       
-                       <li data-l10n-id="news-link">Follow the latest articles in the <a href="news/">News</a>section.</li>
+                       <li data-l10n-id="news-link">Follow the latest articles on the <a href="news/">News</a>page.</li>
                        <li data-l10n-id="faq-link">Visit our <a href="faq/">Frequently Asked Questions (FAQ)</a>to learn more!</li>
                     </ul>
                   </p>
