Updated retina images and various other css adjustments

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -17,9 +17,9 @@
     <title>chia.network</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/flexboxgrid/6.3.1/flexboxgrid.min.css" type="text/css">
-    <link rel="stylesheet" href="css/style.css?v2" type="text/css">
+    <link rel="stylesheet" href="css/style.css?v3" type="text/css">
 
-    <link rel="stylesheet" href="../css/bootstrap.min.css?v1" type="text/css">
+    <link rel="stylesheet" href="../css/bootstrap.min.css?v2" type="text/css">
     <link href="https://fonts.googleapis.com/css?family=Lato" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Poppins|Roboto" rel="stylesheet">
     <link rel="apple-touch-icon" sizes="180x180" href="apple-touch-icon.png">
@@ -75,7 +75,7 @@
            
           </div>
           <div class="col-7">
-            <img src="../images/main_illo.png" alt="chia image">
+            <img src="../images/main_illo.svg" alt="chia image">
           </div>
           </div>
         </div>
@@ -101,7 +101,7 @@
       <div class="wrap container-fluid" id="learn">
             <div class="row centered">
               <div class="col ">
-                <img src="../images/icon_learn.png">
+                <img src="../images/icon_learn.svg">
               </div>
               <div class="w-100"></div>
               <div class="col ">
@@ -160,10 +160,10 @@
         <div class="wrap container-fluid" id="about">
           <div class="row">
             <div class="col centered">
-                <img src="../images/second_illo.png">
+                <img src="../images/second_illo.svg">
             </div>
             <div class="col-7">
-                 <img src="../images/icon_about.png">
+                 <img src="../images/icon_about.svg">
                 <h2 data-l10n-id="About Chia">About Chia</h2>
                 <p data-l10n-id="about-detail"> Chia Network is a San Francisco-based company focused on improving crypto-currency infrastructure. Our CEO, Bram Cohen, famously invented BitTorrent: the first modern decentralized network protocol and one of the inspirations for the Bitcoin
                   protocol. Our founding team has experience across the crypto-currency and finance sectors, coming from Tradehill, CryptoCorp and Lightning Labs. </p>
@@ -177,7 +177,7 @@
             <div class="special">
               <div class="col-6">
                 <div class="content">
-                  <img src="../images/icon_finance.png">
+                  <img src="../images/icon_finance.svg">
                   <h2 data-l10n-id="financial-instituations">Financial Institutions</h2>
                   <p data-l10n-id="financial-instituation-value-prop"> Digital Money is being increasingly demanded by individual and institutional investors. Chia can help traditional financial institutions meet that demand. </p>
                   <p class="sub_link_p" data-l10n-id="contact-us">
@@ -210,7 +210,7 @@
         <div class="wrap container-fluid" id="jobs" >
           <div class="row">
             <div class="col">
-              <img src="../images/icon_jobs.png">
+              <img src="../images/icon_finance.svg">
               <h2 data-l10n-id="jobs">Work at Chia</h2>
             </div>
             <div class="col-8">
