Updated work icon

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -210,7 +210,7 @@
         <div class="wrap container-fluid" id="jobs" >
           <div class="row">
             <div class="col">
-              <img src="../images/icon_finance.svg">
+              <img src="../images/icon_work.svg">
               <h2 data-l10n-id="jobs">Work at Chia</h2>
             </div>
             <div class="col-8">
