Added links to Ben Fisch's VDF video

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -115,14 +115,15 @@
                   <p>
                     <ul>
                       <li><h4>Talks and Papers</h4></li>
-                       <li>A
-                        <a href="https://www.youtube.com/watch?v=iqxkO7C-cyk&feature=youtu.be">talk</a> at BPASE on Proofs of Space and Verifiable Delay Functions.</li>
-
-                      <li data-l10n-id="recent-talk">A
+                       <li>Bram Cohen giving a
+                        <a href="https://www.youtube.com/watch?v=iqxkO7C-cyk&feature=youtu.be">talk</a> at BPASE on Proofs of Space.</li>
+                        <li>Ben Fisch giving a
+                        <a href="https://www.youtube.com/watch?v=qUoagL7OZ1k&feature=youtu.be">talk</a> at BPASE on Verifiable Delay Functions.</li>
+                      <li data-l10n-id="recent-talk">Bram's
                         <a href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">recent talk</a> (starts about 20:00) with
                         <a href="https://drive.google.com/file/d/0ByHuc4xBso7TaEpWSlozWlpxcVk/view">slides</a>.</li>
-                      <li data-l10n-id="older-talk">An
-                        <a href="https://www.youtube.com/watch?v=aYG0NxoG7yw">older talk</a> with
+                      <li data-l10n-id="older-talk">Bram's
+                        <a href="https://www.youtube.com/watch?v=aYG0NxoG7yw">older talk </a> with
                         <a href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>.</li>
                         <li data-l10n-id="tech-paper-link">A very
                         <a href="https://eprint.iacr.org/2017/893">technical paper</a> on proofs of space.</li>
