Updated Main Background Color

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -47,6 +47,7 @@
 
   <body class="layout">
     <div class="page js-page">
+      <div id="main-wrapper">
       <nav id="navbar_homepage" class="navbar navbar-light bg-faded ">
               <a class="navbar-brand" href="/">
                 <img src="../images/chia-logo.svg" class="logo">
@@ -80,7 +81,7 @@
           </div>
         </div>
       </div><!--/main-hero-->
-
+</div><!--/end of main wrapper-->
 <div class="page_wrapper">
       
         <div class="wrap container-fluid" id="announcements">
