Updated email contact info
Updated all emails to be .net instead of .network

--- a/webroot/faq/index.html
+++ b/webroot/faq/index.html
@@ -53,7 +53,7 @@
             <a class="nav-link active" href="/faq/index.html">FAQ</a>
           </li>
           <li class="nav-item">
-            <button type="button" class="btn btn-primary btn-lg" ><a class="jobs_link" href="mailto:hello@chia.network">We're hiring!</a></button>
+            <button type="button" class="btn btn-primary btn-lg" ><a class="jobs_link" href="mailto:hello@chia.net">We're hiring!</a></button>
           </li>
         </ul>
       </nav>
@@ -260,7 +260,7 @@
                   </li>
                   
                   <li>
-                    <a href="mailto:hello@chia.network">hello@chia.network</a>
+                    <a href="mailto:hello@chia.net">hello@chia.net</a>
                   </li>
                   <li>
                     <p>1-844-257-8433</p>
