--- a/webroot/index.html
+++ b/webroot/index.html
@@ -183,7 +183,7 @@
                   <h2 data-l10n-id="financial-instituations">Financial Institutions</h2>
                   <p data-l10n-id="financial-instituation-value-prop"> Digital Money is being increasingly demanded by individual and institutional investors. Chia can help traditional financial institutions meet that demand. </p>
                   <p class="sub_link_p" data-l10n-id="contact-us">
-                    <a class="sub_link" href="mailto:hello@chia.network">Contact us to find out more<div class="arrow-right"></div></a>
+                    <a class="sub_link" href="mailto:hello@chia.net">Contact us to find out more<div class="arrow-right"></div></a>
                   </p>
                 </div>
               </div>
@@ -218,7 +218,7 @@
             <div class="col-8">
               <p data-l10n-id="looking-to-hire"> We're looking to hire several technically gifted programmers to work with our team of cryptographers on building our protocol. Must have strong algorithms skills. Cryptography experience is a plus but not required. Remote is okay but being
                 in San Francisco is a plus. To apply, please complete several HackerRank challenges and send a link to your HackerRank profile along with your resume to
-                <a href="mailto:jobs@chia.network">jobs@chia.network</a>. </p>
+                <a href="mailto:jobs@chia.net">jobs@chia.net</a>. </p>
             </div>
           </div>
         </div>
@@ -268,7 +268,7 @@
                   </li>
                   
                   <li>
-                    <a href="mailto:hello@chia.network">hello@chia.network</a>
+                    <a href="mailto:hello@chia.net">hello@chia.net</a>
                   </li>
                   <li>
                     <p>1-844-257-8433</p>
