Updated link for info box

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -121,10 +121,10 @@
                         <li>Ben Fisch giving a
                         <a href="https://www.youtube.com/watch?v=qUoagL7OZ1k&feature=youtu.be">talk</a> at BPASE on Verifiable Delay Functions.</li>
                       <li data-l10n-id="recent-talk">Bram's
-                        <a href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">recent talk</a> (starts about 20:00) with
+                        <a href="https://www.facebook.com/BerkeleyBlockchain/videos/2006069823011271/">recent talk at Berkeley</a> (starts about 20:00) with
                         <a href="https://drive.google.com/file/d/0ByHuc4xBso7TaEpWSlozWlpxcVk/view">slides</a>.</li>
                       <li data-l10n-id="older-talk">Bram's
-                        <a href="https://www.youtube.com/watch?v=aYG0NxoG7yw">older talk </a> with
+                        <a href="https://www.youtube.com/watch?v=aYG0NxoG7yw">older talk at BPASE 2017</a> with
                         <a href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>.</li>
                         <li data-l10n-id="tech-paper-link">A very
                         <a href="https://eprint.iacr.org/2017/893">technical paper</a> on proofs of space.</li>
