Updated learn more links

--- a/webroot/index.html
+++ b/webroot/index.html
@@ -117,7 +117,7 @@
                     <ul>
                       <li><h4>Talks and Papers</h4></li>
                        <li>Bram Cohen giving a
-                        <a href="https://www.youtube.com/watch?v=iqxkO7C-cyk&feature=youtu.be">talk</a> at BPASE 2018 on Proofs of Space.</li>
+                        <a href="https://www.youtube.com/watch?v=iqxkO7C-cyk&feature=youtu.be">talk</a> at BPASE 2018 based on this very <a href="https://eprint.iacr.org/2017/893">technical paper</a> about Proofs of Space. </li>
                         <li>Ben Fisch giving a
                         <a href="https://www.youtube.com/watch?v=qUoagL7OZ1k&feature=youtu.be">talk</a> at BPASE 2018 on Verifiable Delay Functions.</li>
                       <li data-l10n-id="recent-talk">Bram Cohen's
@@ -126,8 +126,6 @@
                       <li data-l10n-id="older-talk">Bram Cohen's
                         <a href="https://www.youtube.com/watch?v=aYG0NxoG7yw">talk at BPASE 2017</a> with
                         <a href="https://cyber.stanford.edu/sites/default/files/bramcohen.pdf">slides</a>.</li>
-                        <li data-l10n-id="tech-paper-link">A very
-                        <a href="https://eprint.iacr.org/2017/893">technical paper</a> on proofs of space.</li>
                       
                     </ul>
                   </p>
